engine/tests/fixtures/invalid/ui/proj-ui-invalid.tg
projection proj_ui_invalid {
  name "Invalid UI"
  description "Projection with malformed UI semantics"

  type ui_contract
  realizes [cap_list_dummy]
  outputs [ui_contract]

  screens {
    screen bad_list kind list title "Bad List" load cap_missing
    screen form_without_submit kind form title "Broken Form" input_shape shape_input_dummy
  }

  collection_views {
    screen missing_screen filter status
    screen bad_list pagination drift
    screen bad_list sort ghost sideways
  }

  screen_actions {
    screen bad_list action cap_missing prominence giant
  }

  visibility_rules {
    action cap_missing visible_if team nope
  }

  status active
}
